--- a/01_RandomPasswordGenerator/index.html
+++ b/01_RandomPasswordGenerator/index.html
@@ -14,10 +14,11 @@
     <div class="container">
         <h1>Generate a <br> <span>Random Password </span> </h1>
         <div class="display">
-            <input type="text" placeholder="Password" id="Password">
+            <input type="text" placeholder="password" id="Password">
             <img src="./images/copy.png" alt="">
         </div>
-        <button type="button"> <img src="images/bolt.png" alt="">Copy Generated Password</button>
+        <button type="button"> <img src="images/bolt.png" alt="">Copy Generated
+            Password</button>
     </div>
     <script src="app.js"></script>
 </body>
