--- a/02_NotesApp/index.html
+++ b/02_NotesApp/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1> <img src="./images/notes.png">Notes</h1>
+        <button class="btn"><img src="./images/edit.png" alt="">create notes</button>
 
+        <div class="notes-container">
+            <!-- <p class="input-box" contenteditable="true">
+                <img src="./images/delete.png" alt="" srcset="">
+            </p> -->
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 
